src/app/(frontend)/product/[id]/page.module.scss
@import "src/styles/media.scss";
@import "src/styles/mixins.scss";

.wrapper {
	padding: 80px 60px;
	height: 850px;

	@media only screen and (max-width: $media-xxl) {
		padding: 60px 40px;
		height: 700px;
	}

	@media only screen and (max-width: $media-xl) {
		padding: 40px 20px;
	}

	@media only screen and (max-width: $media-lg) {
		padding: 80px 60px;
		height: 100%;
	}

	@media only screen and (max-width: $media-sm) {
		padding: 20px;
	}
}

.productPage {
	display: flex;
	justify-content: space-between;
	height: 100%;
	width: 100%;

	@media only screen and (max-width: $media-lg) {
		flex-direction: column;
	}

	&__description {
		padding-top: 32px;
		width: 100%;
		max-width: 300px;
		display: flex;
		flex-direction: column;
		justify-content: space-between;
		word-break: break-word; 
		overflow-wrap: break-word; 
		word-wrap: break-word;

		@media only screen and (max-width: $media-lg) {
			max-width: unset;
			justify-content: normal;
		}

		.info {
			display: flex;
			flex-direction: column;

			&__title {
				width: 100%;
				display: flex;
				flex-direction: column;

				@media only screen and (max-width: $media-lg) {
				}
			}

			&__wrapper {
				width: 100%;
				display: block;
				margin-bottom: 32px;

				@media only screen and (max-width: $media-lg) {
					display: flex;
					margin-bottom: 0;
				}
			}

			.title {
				font-size: 40px;
				font-weight: 300;
				line-height: 46px;
				margin-bottom: 10px;

				@media only screen and (max-width: $media-xxl) {
					font-size: 34px;
				}

				@media only screen and (max-width: $media-lg) {
					font-size: 28px;
					line-height: 32px;
					margin-bottom: 0;
				}
			}

			.subTitle {
				font-size: 24px;
				font-weight: 700;
				line-height: 28px;
				margin-bottom: 15px;
				transition: var(--transition);

				@media only screen and (max-width: $media-xxl) {
					font-size: 20px;
					line-height: 22px;
				}

				@media only screen and (max-width: $media-lg) {
					font-size: 16px;
					line-height: 18px;
					margin-bottom: 25px;
				}
			}

			.subTitleLink {
				&:hover {
					color: var(--gray-color);
				}
			}

			.price {
				font-size: 36px;
				font-weight: 400;
				line-height: 38px;
				margin-bottom: 25px;

				@media only screen and (max-width: $media-xxl) {
					font-size: 30px;
					line-height: 32px;
				}

				@media only screen and (max-width: $media-lg) {
					font-size: 28px;
					line-height: 16px;
					margin-bottom: 0;
					padding-top: 5px;
				}
			}

			.desc {
				font-size: 20px;
				font-weight: 400;
				line-height: 24px;
				word-break: normal;

				@media only screen and (max-width: $media-xxl) {
					font-size: 16px;
					line-height: 22px;
				}

				@media only screen and (max-width: $media-lg) {
					font-size: 16px;
					line-height: 16px;
					margin-bottom: 10px;
				}
			}
		}
	}
}

.defaultImageWrapper {
	position: relative;
	width: 100%;
	margin-right: 25px;
	display: flex;
	justify-content: center;
	align-items: center;
	border-radius: 24px;
	border: 4px solid var(--primary-color);
	box-shadow: 2px 2px 0 2px var(--primary-color);
	overflow: hidden;
}

.mobileActions {
	display: none;
	position: absolute;
	z-index: 100;
	top: 14px;
	right: 18px;

	@media only screen and (max-width: $media-lg) {
		display: block;
	}
}

